@@ -1,9 +1,13 @@
+2009-09-20  Christof Damian  <christof@damian.net>
+
+	* fix for multibyte day and month names
+
 2009-02-27  Christof Damian  <christof@damian.net>
 
 	* releaseing version 1.15
 
 2008-09-23 Christof Damian  <christof@damian.net>
-	
+
 	* new "mergemonth" option for the month, months and year view
 
 2008-09-16 	Christof Damian  <christof@damian.net>
